terminado todas las funcionalidades

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <div class="col d-flex justify-content-center" id="paper_2"><i class="fa-solid fa-hand jugador2" style="color: #000000;"></i></div>
             <div class="col d-flex justify-content-center" id="rock_2"><i class="fa-solid fa-hand-back-fist jugador2" style="color: #000000;"></i></div>
         </div>
+        <div class="row">
+            <div id="mostrarResultado">
+               
+            </div>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
