--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 <body>
     <div class="caja">
         <h1 class="d-flex justify-content-center">Rock paper and scissors</h1>
+        <h2 class="etiquetadejugador">jugador N 1</h2>
         <div class="row">
-            <div class="col d-flex justify-content-center"  id="tijera"><i class="fa-solid fa-hand-scissors"value="tijera" style="color: #000000;"></i></div>
-            <div class="col d-flex justify-content-center" id="paper"><i class="fa-solid fa-hand" style="color: #000000;"></i></div>
-            <div class="col d-flex justify-content-center" id="rock"><i class="fa-solid fa-hand-back-fist" style="color: #000000;"></i></div>
+            <div class="col d-flex justify-content-center"  id="tijera"><i class="fa-solid fa-hand-scissors" id="id-tijera" style="color: #000000;"></i></div>
+            <div class="col d-flex justify-content-center" id="paper"><i class="fa-solid fa-hand" id="id-paper"  style="color: #000000;"></i></div>
+            <div class="col d-flex justify-content-center" id="rock"><i class="fa-solid fa-hand-back-fist" id="id-rock" style="color: #000000;"></i></div>
         </div>
         <div class="row">
-            <div class="col d-flex justify-content-center" id="tijera_2"><i class="fa-solid fa-hand-scissors jugador2" style="color: #000000;"></i></div>
-            <div class="col d-flex justify-content-center" id="paper_2"><i class="fa-solid fa-hand jugador2" style="color: #000000;"></i></div>
-            <div class="col d-flex justify-content-center" id="rock_2"><i class="fa-solid fa-hand-back-fist jugador2" style="color: #000000;"></i></div>
+            <h2 class="etiquetadejugador">jugador N 2</h2>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-center" id="tijera_2"><i class="fa-solid fa-hand-scissors jugador2" id="id-n2-tijera" style="color: #000000;"></i></div>
+            <div class="col d-flex justify-content-center" id="paper_2"><i class="fa-solid fa-hand jugador2" style="color: #000000;" id="id-n2-paper"></i></div>
+            <div class="col d-flex justify-content-center" id="rock_2"><i class="fa-solid fa-hand-back-fist jugador2" style="color: #000000;" id="id-n2-rock"></i></div>
         </div>
         <div class="row">
             <div id="mostrarResultado">
